# CreditDefaultRisk

./: .gitignore  341.ipynb  README.md  notebook.ipynb  pyproject.toml
deployment/: Dockerfile  fastapi_model_server.py  requirements.txt  test_case_example.txt
src/: functions.py
