[tool.poetry]
name = "mkrasu-ds-v2-5-3-4-1"
version = "0.1.0"
description = "loan risk evaluation"
authors = ["Marius <mariuskrasuckas@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mkrasu_ds"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
category-encoders = "^2.6.4"
xgboost = "^2.1.1"
numpy = "1.26.4"
catboost = "1.2.6"
lightgbm = "^4.5.0"
matplotlib = "^3.9.2"
phik = "^0.12.4"
optuna = "^4.0.0"
shap = "^0.46.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
